postgres + refactoring
