# internal/models/reminder.go
@@ -1,27 +1,15 @@
-package storage
+package models
 
 import (
 	"fmt"
 	"time"
 )
 
-var lastID uint64
-
 // Reminder contains reminder information
 type Reminder struct {
-	ID   uint64
-	Text string
-	Date time.Time
-}
-
-// NewReminder creates a new Reminder with unique ID
-func NewReminder(text string, date time.Time) *Reminder {
-	lastID++
-	return &Reminder{
-		ID:   lastID,
-		Text: text,
-		Date: date,
-	}
+	ID   uint64    `db:"id"`
+	Text string    `db:"text"`
+	Date time.Time `db:"date"`
 }
 
 // String converts Reminder to string
